# updatedreefbot

./: CMakeLists.txt  IncludeMatlab.cmake  LICENSE  README.md  ROSCommon.cmake  fixROSPath.rc  fixROSPathC.rc  fixROSPathF.rc  mainpage.dox  manifest.xml  nodelet_plugins.xml  reefbot.launch  test_video.launch
cascade_detector/: CMakeLists.txt  mainpage.dox  manifest.xml
cascade_detector/include/cascade_detector/: cascade_detector.h  detailed_cascade_detector.h
cascade_detector/msg/: Detection.msg  Mask.msg
cascade_detector/src/: CvBridge.h  cascade_detector.cpp  cascade_detector_main.cpp  detailed_cascade_detector.cc  estimate_detector_timing.cc
cascade_detector/srv/: DetectObject.srv
cv_blobs/: CMakeLists.txt  mainpage.dox  manifest.xml
cv_blobs/include/cv_blobs/: Blob.h  BlobFilters.h  BlobResult-Inline.h  BlobResult.h  pyblob.h
cv_blobs/src/: Blob.cc  BlobResult.cc  BlobTest.py  CreateBlobFrames.cc
cv_blobs/src/cv_blobs/: Blob.py  DisplayBlobBoxes.py  pyblob.cc
cv_blobs/src/cv_bridge/: CvBridge.patch
cv_blobs/test/: BlobResultTest.cc  BlobTest.cc
fish-finder/: mainpage.dox  manifest.xml
frame_grabber/: CMakeLists.txt  mainpage.dox  manifest.xml
frame_grabber/launch/: frame_grabber.launch
frame_grabber/msg/: File.msg
frame_grabber/src/: grab_frame.cc
frame_grabber/src/frame_grabber/msg/: _File.py
frame_grabber/src/frame_grabber/srv/: _Delay.py  _Exit.py  _NumSnapshot.py  _Rate.py  _Snapshot.py  __init__.py
frame_grabber/srv/: Delay.srv  Exit.srv  NumSnapshot.srv  Rate.srv  Snapshot.srv
go_motion/: CMakeLists.txt  mainpage.dox  manifest.xml
go_motion/src/: GoIO_DeviceCheck.cpp
hog_detector/: CMakeLists.txt  mainpage.dox  manifest.xml
hog_detector/include/hog_detector/: hog_detector.h  hog_detector_internal.h  hog_detector_nodelet.h  integral_hog_cascade.h  integral_hog_cascade_trainer.h  integral_hog_detector.h  integral_hog_detector_inl.h  interpolation.h
hog_detector/src/: ExtractHardNegatives.cc  ExtractRandomWindows.py  ProfileIntegralHogDetector.cc  TrainCascadeUsingImages.cc  hog_detector.cc  hog_detector_internal.cc  hog_detector_node.cc  hog_detector_nodelet.cc  integral_hog_cascade.cc  integral_hog_cascade_trainer.cc  integral_hog_detector.cc  integral_hog_trainer.cc  interpolation.cc
hog_detector/test/: hog_detector_test.cc  integral_hog_detector_test.cc  interpolation_test.cc
include/cascade_parts_detector/: cascade_parts_detector.h  cascade_parts_detector_nodelet.h
include/visual_utility/: FrameEstimator.h  GeometricTransforms-Inl.h  GeometricTransforms.h  TimingEstimator.h  TransformEstimator-Inl.h  TransformEstimator.h  VisualUtilityEstimator.h  VisualUtilityEstimatorNodelet.h  VisualUtilityEstimatorXMLParameters.h  VisualUtilityFilter.h  VisualUtilityFilterNodelet.h  VisualUtilityMosaic.h  VisualUtilityROSParams.h  cvutils-inl.h  cvutils.h  gnuplot_i.hpp
msg/: DetectionArray.msg  Parameter.msg  VisualUtilityEstimation.msg
objectness/: CMakeLists.txt  mainpage.dox  manifest.xml
objectness/include/objectness/: objectness.h
objectness/src/: objectness.cc
objectness/src/ObjectnessICCV/: bescores.mexa64  integralimage.mexa64  mvg_FelzenswalbSuperpixelWrapper.m  mvg_scoreWindows.m  scoreSamplingMex.mexa64  selectwindows.mexa64  wsscores.mexa64
objectness/src/ObjectnessICCV/segmentation/: segment
objectness/test/: objectness_test.cc
reefbot_hudui/: mainpage.dox  manifest.xml
src/: CascadeTrainer.cc  CreateVisualUtiltyEstimationVideo.cc  CvBridge.h  EstimateVUTiming.cc  EvalVUOfImages.cc  FrameEstimator.cc  TimingEstimator.cc  TransformEstimator.cc  VisualUtilityEstimator.cc  VisualUtilityEstimatorNode.cc  VisualUtilityEstimatorNodelet.cc  VisualUtilityEstimatorXMLParameters.cc  VisualUtilityFilter.cc  VisualUtilityFilterNode.cc  VisualUtilityFilterNodelet.cc  VisualUtilityMosaic.cc  VisualUtilityROSParams.cc  cascade_parts_detector.cc  cascade_parts_detector_node.cc  cascade_parts_detector_nodelet.cc  cvutils.cc  gnuplot.cpp
src/base/: BasicTypes.h  CMakeLists.txt  StringHash.h  StringPiece.cc  StringPiece.h  StringPieceTest.cc  hash_map.h  linked_ptr.h
src/voc_release4/: Makefile  globals.m
src/voc_release4/star-cascade/: cascade_demo.m  cascade_process.m
srv/: FilterImage.srv
test/: FrameEstimatorTest.cc  GeometricTransformsTest.cc  SaliencyEstimatorTest.cc  TransformEstimatorTest.cc  VisualUtilityEstimatorTest.cc  VisualUtilityMosaicTest.cc  cascade_parts_detector_test.cc
